--- a/src/pages/cinema/cinema.html
+++ b/src/pages/cinema/cinema.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item class="cinema-content" (click)="goMovieDetailPage()">
+    <ion-item class="cinema-content" (click)="goBuyTicketPage()">
       <ion-icon name="cinemaIcon" class="cinema-icon"></ion-icon>
       <h2>
         金逸影城IMAX店
